--- a/src/app/public/login/login.component.html
+++ b/src/app/public/login/login.component.html
@@ -1,35 +1,189 @@
-<div class="card w-50 mt-5" style="margin-left: 25%">
-  <div class="card-body">
-    <main class="form-signin" (submit)="submit()">
-      <form [formGroup]="loginForm">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+<style>
+  /* Remove custom style */
+  .circles {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+  }
 
-        <div class="form-floating my-2">
-          <input
-            type="email"
-            class="form-control"
-            id="floatingInput"
-            placeholder="name@example.com"
-            formControlName="email"
-          />
-          <label for="floatingInput">Email address</label>
-        </div>
-        <div class="form-floating my-1">
-          <input
-            type="password"
-            class="form-control"
-            id="floatingPassword"
-            placeholder="Password"
-            formControlName="password"
-          />
-          <label for="floatingPassword">Password</label>
-        </div>
+  .circles li {
+    position: absolute;
+    display: block;
+    list-style: none;
+    width: 20px;
+    height: 20px;
+    background: rgba(255, 255, 255, 0.2);
+    animation: animate 25s linear infinite;
+    bottom: -150px;
+  }
 
-        <button class="w-100 btn btn-lg btn-primary" type="submit">
-          Sign in
-        </button>
-        <p class="mt-5 mb-3 text-muted">&copy; 2022–2023</p>
-      </form>
-    </main>
+  .circles li:nth-child(1) {
+    left: 25%;
+    width: 80px;
+    height: 80px;
+    animation-delay: 0s;
+  }
+
+  .circles li:nth-child(2) {
+    left: 10%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 2s;
+    animation-duration: 12s;
+  }
+
+  .circles li:nth-child(3) {
+    left: 70%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 4s;
+  }
+
+  .circles li:nth-child(4) {
+    left: 40%;
+    width: 60px;
+    height: 60px;
+    animation-delay: 0s;
+    animation-duration: 18s;
+  }
+
+  .circles li:nth-child(5) {
+    left: 65%;
+    width: 20px;
+    height: 20px;
+    animation-delay: 0s;
+  }
+
+  .circles li:nth-child(6) {
+    left: 75%;
+    width: 110px;
+    height: 110px;
+    animation-delay: 3s;
+  }
+
+  .circles li:nth-child(7) {
+    left: 35%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 7s;
+  }
+
+  .circles li:nth-child(8) {
+    left: 50%;
+    width: 25px;
+    height: 25px;
+    animation-delay: 15s;
+    animation-duration: 45s;
+  }
+
+  .circles li:nth-child(9) {
+    left: 20%;
+    width: 15px;
+    height: 15px;
+    animation-delay: 2s;
+    animation-duration: 35s;
+  }
+
+  .circles li:nth-child(10) {
+    left: 85%;
+    width: 150px;
+    height: 150px;
+    animation-delay: 0s;
+    animation-duration: 11s;
+  }
+
+  @keyframes animate {
+    0% {
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+    }
+
+    100% {
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+    }
+  }
+</style>
+
+<div class="relative min-h-screen flex">
+  <div class="flex flex-col sm:flex-row items-center md:items-start sm:justify-center md:justify-start flex-auto min-w-0 bg-white">
+    <div class="sm:w-1/2 xl:w-3/5 h-full hidden md:flex flex-auto items-center justify-center p-10 overflow-hidden bg-green-500 text-white bg-no-repeat bg-cover relative"
+      style="background-image: url();">
+      <div class="absolute bg-gradient-to-b from-green-600 to-green-500 opacity-75 inset-0 z-0"></div>
+      <div class="w-full max-w-md z-10">
+        <div class="sm:text-4xl xl:text-5xl font-bold leading-tight mb-6">wallam.</div>
+        <div class="sm:text-sm xl:text-md text-gray-200 font-normal"> Ensemble contruisons une societe plus solidaire.
+        </div>
+      </div>
+      <!-- Remove custom style -->
+      <ul class="circles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </div>
+    <div class="md:flex md:items-center md:justify-center w-full sm:w-auto md:h-full w-2/5 xl:w-2/5 p-8 md:p-10 lg:p-14 sm:rounded-lg md:rounded-none bg-white">
+      <div class="max-w-md w-full space-y-8">
+        <div class="text-center">
+          <h2 class="mt-6 text-3xl font-bold text-gray-900">
+            Welcome Back!
+          </h2>
+          <p class="mt-2 text-sm text-gray-500">Connectez vous sur wallam!</p>
+        </div>
+        <main class="form-signin" (submit)="submit()">
+       
+        <form [formGroup]="loginForm" class="mt-8 space-y-6">
+   
+          <div class="relative">
+            <label for="email" class="ml-3 text-sm font-bold text-gray-700 tracking-wide">Email</label>
+            <input type="email" name="email"  formControlName="email" autofocus required
+              class="w-full text-base px-4 py-2 border-b border-gray-300 focus:outline-none rounded-2xl focus:border-indigo-500" />
+          </div>
+          <div class="mt-8 content-center">
+            <label for="password" class="ml-3 text-sm font-bold text-gray-700 tracking-wide">Mot de passe</label>
+            <input type="password" name="password"  formControlName="password" autocomplete="current-password" required
+              class="w-full content-center text-base px-4 py-2 border-b rounded-2xl border-gray-300 focus:outline-none focus:border-indigo-500" />
+          </div>
+          <div class="flex items-center justify-between">
+            <div class="flex items-center">
+              <input type="checkbox" name="rememberMe"
+                class="h-4 w-4 bg-green-500 focus:ring-blue-400 border-gray-300 rounded" />
+              <label for="rememberMe"
+                class="ml-3 text-sm font-bold text-gray-700 tracking-wide">Se souvenir de moi</label>
+            </div>
+          </div>
+          <div class="text-sm">
+            <a href="" class="text-indigo-400 hover:text-blue-500">Mot de passe oublié?</a>
+          </div>
+          <div>
+            <button type="submit"
+              class="text-semibold w-full p-2 flex justify-center bg-gradient-to-r from-green-500 to-green-600  hover:bg-gradient-to-l hover:from-green-500 hover:to-green-600 text-gray-100 p-2 rounded-full tracking-wide font-semibold
+              2 rounded-full tracking-wide font-semibold  shadow-lg cursor-pointer transition ease-in duration-500">
+              Se connecter
+            </button>
+          </div>
+          <p class="flex flex-col items-center justify-center mt-10 text-center text-md text-gray-500">
+            <span >*******</span>
+            <a href="register"
+              class="text-indigo-400 hover:text-blue-500 no-underline hover:underline cursor-pointer transition ease-in duration-300">
+              Créer un compte
+            </a>
+          </p>
+        </form>
+      </main>
+      </div>
+    </div>
   </div>
 </div>
