--- a/src/app/shared/components/campaigns-list/campaigns-list.component.html
+++ b/src/app/shared/components/campaigns-list/campaigns-list.component.html
@@ -1,1 +1,55 @@
-<p>campaigns-list works!</p>
+
+<section class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-1 py-3">
+    <div class="text-center pb-12">
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div *ngFor="let campaign of campaignsData">
+          <div class="w-full mb-4 bg-white rounded-lg shadow-lg overflow-hidden flex flex-col md:flex-row lg:mb-6 border-2 border-green-500 border-opacity-0.5">
+            <a>
+              <div class="w-full md:w-5/5 h-80">
+                <img class="object-center object-cover w-full h-full" [src]="'assets/images/agriculture.jpeg'" alt="photo">
+              </div>
+              <div class="w-full md:w-5/5 text-left p-6 md:p-4 space-y-2 ">
+                <p class="text-xl text-gray-700 inline-block font-bold">{{ campaign.title }}</p>
+            <p class="text-sm">crée le : {{ campaign.dateCreated }}</p>
+            <div class="text-right">
+              <span class="text-xs font-bold inline-block text-green">{{ campaign.accountBalance }}  </span>
+              <p class="text-xs inline-block"> recoltée sur {{ campaign.target }} XOF</p>
+            </div>
+            <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-green-100">
+              <div [style.width]="campaign.progress + '%'" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-500"></div>
+            </div>
+            <p class="text-base leading-relaxed text-gray-500 font-normal line-clamp-3">{{ campaign.description }} <span class="text-green-500"> Voir plus</span></p>
+
+            <div class="flex justify-start space-x-2">
+              <a [href]="'https://www.facebook.com/sharer.php?u=https://www.wallam.co/campaigns/' + campaign.slug" target="_blank"
+                class="text-blue-500 hover:text-gray-600">
+                <svg class="w-8 h-8" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24">
+                  <path fill-rule="evenodd"
+                    d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                    clip-rule="evenodd"></path>
+                </svg>
+              </a>
+              <a [href]="'whatsapp://send?text=https://www.wallam.co/campaigns/' + campaign.slug" data-action="share/whatsapp/share"
+                class="text-green-400 hover:text-gray-600">
+                <svg class="w-8 h-10" aria-hidden="true" fill="currentColor" viewBox="0 0 24 24">
+                  <path
+                    d="m11.7 9.6c-0.2-0.1-1.2-0.6-1.4-0.6-0.2-0.1-0.3-0.2-0.4 0-0.2 0.2-0.6 0.7-0.7 0.8s-0.2 0.2-0.4 0.1-0.8-0.3-1.6-1c-0.6-0.5-1-1.2-1.1-1.4s0-0.3 0.1-0.4 0.2-0.2 0.3-0.4c0.1-0.1 0.1-0.2 0.2-0.3s0-0.3 0-0.3c-0.1-0.1-0.5-1.1-0.7-1.5-0.1-0.4-0.3-0.4-0.4-0.4h-0.4s-0.3 0-0.5 0.2c-0.2 0.3-0.7 0.8-0.7 1.7s0.7 1.9 0.8 2 1.4 2.1 3.4 3c0.5 0.2 0.8 0.3 1.1 0.4 0.5 0.2 0.9 0.1 1.3 0.1 0.4-0.1 1.2-0.5 1.3-1 0.2-0.5 0.2-0.9 0.1-0.9 0 0-0.1-0.1-0.3-0.1m-3.7 4.9c-1.2 0-2.4-0.3-3.4-0.9l-0.2-0.1-2.5 0.7 0.7-2.4-0.2-0.3c-0.7-1.1-1-2.3-1-3.5 0-3.6 3-6.6 6.6-6.6 1.8 0 3.4 0.7 4.7 1.9s1.9 2.9 1.9 4.7c0.1 3.5-2.9 6.5-6.6 6.5m5.7-12.2c-1.5-1.5-3.5-2.3-5.7-2.3-4.4 0-8 3.6-8 7.9 0 1.4 0.4 2.8 1.1 4l-1.1 4.1 4.2-1.1c1.2 0.6 2.5 1 3.8 1 4.4 0 8-3.6 8-7.9 0-2.2-0.8-4.2-2.3-5.7"/>
+                </svg>
+              </a>
+            </div>
+            <div class="flex justify-start space-x-2">
+              <svg class="w-8 h-5" viewBox="0 0 20 20">
+                <path
+                  d="M12.075,10.812c1.358-0.853,2.242-2.507,2.242-4.037c0-2.181-1.795-4.618-4.198-4.618S5.921,4.594,5.921,6.775c0,1.53,0.884,3.185,2.242,4.037c-3.222,0.865-5.6,3.807-5.6,7.298c0,0.23,0.189,0.42,0.42,0.42h14.273c0.23,0,0.42-0.189,0.42-0.42C17.676,14.619,15.297,11.677,12.075,10.812 M6.761,6.775c0-2.162,1.773-3.778,3.358-3.778s3.359,1.616,3.359,3.778c0,2.162-1.774,3.778-3.359,3.778S6.761,8.937,6.761,6.775 M3.415,17.69c0.218-3.51,3.142-6.297,6.704-6.297c3.562,0,6.486,2.787,6.705,6.297H3.415z">
+                </path>
+              </svg>
+              {{ campaign.transactions.length }} participants
+            </div>
+            <div class="flex text-sm justify-start ml-2 space-x-2"><small>Par: {{ campaign.userName }}</small></div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
