--- a/src/styles.scss
+++ b/src/styles.scss
@@ -111,3 +111,17 @@
       border-radius: 50%;
     }
   }
+
+
+  .pt-\[17\%\] {
+    padding-top: 17%;
+  }
+  .mt-\[-10\%\] {
+    margin-top: -10%;
+  }
+  .pt-\[56\.25\%\] {
+    padding-top: 56.25%;
+  }
+
+
+  
