--- a/src/app/public/donate/donate.component.html
+++ b/src/app/public/donate/donate.component.html
@@ -1,1 +1,44 @@
-<p>donate works!</p>
+<div class="min-w-screen min-h-screen bg-green-200 flex items-center justify-center px-5 pb-10 pt-16">
+  <div class="w-full mx-auto rounded-lg bg-white shadow-lg p-5 text-gray-700" style="max-width: 600px">
+    <div class="w-full pt-1 pb-5">
+      <div class="bg-green-500 text-white overflow-hidden rounded-full w-20 h-20 -mt-16 mx-auto shadow-lg flex justify-center items-center">
+        <i class="mdi mdi-credit-card-outline text-3xl"></i>
+      </div>
+    </div>
+    <div class="mb-10">
+      <h1 class="text-center font-bold text-xl uppercase">Paiement securisé</h1>
+    </div>
+    <form  [formGroup]="paymentForm" (submit)="submit()">
+    
+  
+    
+      <div class="mb-3">
+        <label class="font-bold text-sm mb-2 ml-1">Montant de la participation*</label>
+        <div>
+          <input formControlName="amount" class="w-full px-3 py-2 mb-1 border-2 border-gray-200 rounded-md focus:outline-none focus:border-indigo-500 transition-colors" placeholder="2000" type="number" oninput="mySimulator()" required />
+          <small class="form-hint"> *Le montant minimum accepté est de 500 Fcfa soit $1</small>
+        </div>
+      </div>
+    
+      <div class="mb-3">
+        <label class="font-bold text-sm mb-2 ml-1">Prenom (Pas obligatoire)</label>
+        <div>
+          <input formControlName="donatorName" class="w-full px-3 py-2 mb-1 border-2 border-gray-200 rounded-md focus:outline-none focus:border-indigo-500 transition-colors" placeholder="Athia" type="text" />
+        </div>
+      </div>
+    
+      <div class="mb-3">
+        <label class="font-bold text-sm mb-2 ml-1">Commentaire (Pas obligatoire)</label>
+        <div>
+          <input formControlName="comment" class="w-full px-3 py-2 mb-1 border-2 border-gray-200 rounded-md focus:outline-none focus:border-indigo-500 transition-colors" autocomplete="comment" placeholder="" type="text" />
+        </div>
+      </div>
+
+      <button type="submit" class="block w-full max-w-xs mx-auto bg-green-500 hover:bg-indigo-700 focus:bg-indigo-700 text-white rounded-lg px-3 py-3 font-semibold">
+        <i class="mdi mdi-lock-outline mr-1"></i> PAYEZ
+      </button>
+    </form>
+  </div>
+</div>
+
+
