success and failure components for aggregator

--- a/src/app/public/success-payment/success-payment.component.html
+++ b/src/app/public/success-payment/success-payment.component.html
@@ -8,10 +8,10 @@
     
     <h1 class="text-4xl font-bold uppercase text-green-500 transition duration-500">Paiement reussi!</h1>
     <h2 class=" text-xl text-gray-700 transition duration-500">Nous vous informons que votre participation a ete prise en compte. Wallam vous remercie!</h2>
-    <div class="lg:ml-96 grid grid-cols-1 md:grid-cols-4 gap-4">
+    <div class="lg:w-2/5">
        
         <a href="/" title="Back to home"
-          class="lg:w-full md:w-32 tracking-wide font-bold rounded border-2 border-green-200 hover:text-white hover:border-white hover:bg-green-500 shadow-md py-2 px-6 inline-flex items-center transition duration-500">
+          class="lg:w-full md:w-30 tracking-wide font-bold rounded border-2 border-green-200 hover:text-white hover:border-white hover:bg-green-500 shadow-md py-1 px-6 inline-flex items-center transition duration-500">
           <span class="mx-auto">VOIR LES CAMPAGNES </span>
         </a>
       
