set up forms on create and redirection

--- a/src/app/secure/create-campaign/create-campaign.component.html
+++ b/src/app/secure/create-campaign/create-campaign.component.html
@@ -1,1 +1,36 @@
-<p>create-campaign works!</p>
+<form  (submit)="onSubmit()">
+
+  <div class="grid grid-cols-1 mt-5 mx-7">
+    <label for="kind" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Type de campagne</label>
+    <select formControlName="kind" id="kind" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
+      <option value="PERSONAL">Personnelle</option>
+      <option value="COMMUNITY">Communautaire</option>
+      <option value="ORGANIZATION">Entreprise</option>
+    </select>
+  </div>
+
+  <div class="grid grid-cols-1 mt-5 mx-7">
+    <label for="title" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Titre de la campagne</label>
+    <input formControlName="title" id="title" type="text" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
+  </div>
+
+  <div class="grid grid-cols-1 mt-5 mx-7">
+    <label for="description" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Dites-nous un peu sur votre campagne</label>
+    <textarea formControlName="description" id="description" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent"></textarea>
+  </div>
+
+  <div class="grid grid-cols-1 mt-5 mx-7">
+    <label for="target" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Montant ciblé en FCFA</label>
+    <input formControlName="target" id="target" type="number" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
+  </div>
+
+  <div class="grid grid-cols-1 mt-5 mx-7">
+    <label for="image" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Image illustrant la campagne</label>
+    <input formControlName="illustration" id="image" type="file" accept="image/png, image/gif, image/jpeg" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
+  </div>
+
+
+  <div class="flex items-center justify-center md:gap-8 gap-4 pt-5 pb-5">
+    <button type="submit" class="w-auto bg-green-500 hover:bg-purple-700 rounded-lg shadow-xl font-medium text-white px-4 py-2">Créer une campagne</button>
+  </div>
+</form>
