--- a/src/app/secure/create-campaign/create-campaign.component.html
+++ b/src/app/secure/create-campaign/create-campaign.component.html
@@ -1,4 +1,4 @@
-<form  (submit)="onSubmit()">
+<form [formGroup]="campaignForm"  (submit)="onSubmit()">
 
   <div class="grid grid-cols-1 mt-5 mx-7">
     <label for="kind" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Type de campagne</label>
@@ -10,22 +10,22 @@
   </div>
 
   <div class="grid grid-cols-1 mt-5 mx-7">
-    <label for="title" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Titre de la campagne</label>
+    <label for="title" class="uppercase md:text-sm text-xs text-gray-900  font-semibold">Titre de la campagne</label>
     <input formControlName="title" id="title" type="text" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
   </div>
 
   <div class="grid grid-cols-1 mt-5 mx-7">
-    <label for="description" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Dites-nous un peu sur votre campagne</label>
+    <label for="description" class="uppercase md:text-sm text-xs text-gray-900 font-semibold">Dites-nous un peu sur votre campagne</label>
     <textarea formControlName="description" id="description" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent"></textarea>
   </div>
 
   <div class="grid grid-cols-1 mt-5 mx-7">
-    <label for="target" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Montant ciblé en FCFA</label>
+    <label for="target" class="uppercase md:text-sm text-xs text-gray-900 font-semibold">Montant ciblé en FCFA</label>
     <input formControlName="target" id="target" type="number" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
   </div>
 
   <div class="grid grid-cols-1 mt-5 mx-7">
-    <label for="image" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Image illustrant la campagne</label>
+    <label for="image" class="uppercase md:text-sm text-xs text-gray-900  font-semibold">Image illustrant la campagne</label>
     <input formControlName="illustration" id="image" type="file" accept="image/png, image/gif, image/jpeg" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
   </div>
 
