--- a/src/app/public/explain/explain.component.html
+++ b/src/app/public/explain/explain.component.html
@@ -1,4 +1,4 @@
-
+<app-navbar></app-navbar>
 <section class="w-full pt-16 pb-20 bg-gray-50">
   <div class="px-10 mx-auto text-center max-w-7xl">
       <h2 class="text-3xl font-bold text-green-500">
