--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -9,14 +9,15 @@
     </div>
   </div>
 </section>
-<section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-4 mt-12 mb-12 ">
+<section class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-1 py-3">
+  <div class="text-center pb-12">
   <article>
     <a routerLink="/launch" class="inline-block text-center bg-green-500 border border-transparent rounded-md py-2 px-1 md:text-2xl text-gray-900 hover:bg-green-700">NOUVELLE CAMPAGNE </a>     
     <h2 class="text-2xl font-bold text-gray-900">MES CAMPAGNES</h2>
-    <section class="mt-6 grid md:grid-cols-2 lg:grid-cols-1 gap-x-6 gap-y-8 ">
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
       <div *ngFor="let campaign of campaigns" class="bg-white group relative rounded-lg overflow-hidden shadow-lg hover:shadow-2xl transform duration-200">
         <div class="relative w-full h-80 md:h-64 lg:h-44 ">
-          <img [src]="campaign.image" alt="Campaign Image" class="w-full h-full object-center object-cover">
+          <img src="assets/images/together.jpg" alt="Campaign Image" class="w-full h-full object-center object-cover">
         </div>
         <div class="px-3 py-4">
           <h3 class="text-base font-semi-bold text-dark pb-2">
@@ -25,16 +26,29 @@
               {{ campaign.title }}
             </a>
           </h3>
-          <p class="text-sm text-dark group-hover:text-green-400">{{ campaign.description }}</p>
+          <p class="text-sm text-dark group-hover:text-green-400 line-clamp-3">{{ campaign.description }}</p>
+          <div *ngIf="campaign.status === 'OPENED'; else closedStatus">
+            <a>
+              <button type="button"  class="block w-3/5 max-w-xs mx-auto bg-green-200 hover:bg-indigo-200 focus:bg-indigo-700 text-white rounded-lg px-1 py-1 mt-6">
+                Demander un paiement
+             </button>
+            </a>
+          </div>
+          <ng-template #closedStatus>
+            <button class="block w-3/5 max-w-xs mx-auto bg-red-500 hover:bg-red-700 focus:bg-red-700 text-white rounded-lg px-1 py-1 mt-6">
+              <i class="mdi mdi-lock-outline mr-1"></i> Fermée
+            </button>
+          </ng-template>
         </div>
       </div>
-    </section>
+    </div>
   </article>
+</div>
 </section>
 
 <section class="relative py-16 bg-blueGray-50">
   <div class="w-full mb-12 px-4">
-    <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-green-600 text-white">
+    <div class="relative flex flex-col min-w-0 break-words w-full mb-6 shadow-lg rounded bg-green-500 text-white">
       <div class="rounded-t mb-0 px-4 py-3 border-0">
         <div class="flex flex-wrap items-center">
           <div class="relative w-full px-4 max-w-full flex-grow flex-1 ">
