--- a/src/app/shared/components/campaigns-list/campaigns-list.component.html
+++ b/src/app/shared/components/campaigns-list/campaigns-list.component.html
@@ -12,12 +12,13 @@
                 <p class="text-xl text-gray-700 inline-block font-bold">{{ campaign.title }}</p>
             <p class="text-sm">crée le : {{ campaign.dateCreated }}</p>
             <div class="text-right">
-              <span class="text-xs font-bold inline-block text-green">{{ campaign.accountBalance }}  </span>
-              <p class="text-xs inline-block"> recoltée sur {{ campaign.target }} XOF</p>
+              <span class="text-xs font-bold inline-block text-green">{{ campaign.accountBalance }}</span>
+              <p class="text-xs inline-block">recoltée sur {{ campaign.target }} XOF</p>
             </div>
             <div class="overflow-hidden h-2 mb-4 text-xs flex rounded bg-green-100">
               <div [style.width]="campaign.progress + '%'" class="shadow-none flex flex-col text-center whitespace-nowrap text-white justify-center bg-green-500"></div>
             </div>
+            <i class="text-green-500 mr-2">{{ campaign.status == 'OPENED'  ? 'ouverte' : 'cloturée' }}</i> 
             <p class="text-base leading-relaxed text-gray-500 font-normal line-clamp-3">{{ campaign.description }} <span class="text-green-500"> Voir plus</span></p>
 
             <div class="flex justify-start space-x-2">
