--- a/src/app/secure/create-campaign/create-campaign.component.html
+++ b/src/app/secure/create-campaign/create-campaign.component.html
@@ -1,3 +1,13 @@
+<div class="flex h-screen bg-green-200 items-center justify-center  mt-6 mb-3">
+  <div class="grid bg-white rounded-lg shadow-xl w-11/12 md:w-9/12 lg:w-1/2">
+    <div class="flex justify-center py-4">
+      <div class="flex bg-green-500 rounded-full md:p-4 p-2 border-2 border-green-300">
+        <svg class="w-8 h-8 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20 7l-8-4-8 4m16 0l-8 4m8-4v10l-8 4m0-10L4 7m8 4v10M4 7v10l8 4"></path></svg>
+      </div>
+    </div>
+
+
+
 <form [formGroup]="campaignForm"  (submit)="onSubmit()">
 
   <div class="grid grid-cols-1 mt-5 mx-7">
