--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -1,9 +1,9 @@
 <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-4 mt-12 mb-12">
   <div  class="bg-white rounded-lg shadow-xl overflow-hidden">
     <div class="p-4">
-      <h2 class="text-2xl font-bold text-gray-900 mb-4">Bonjour </h2>
+      <h2 class="text-2xl font-bold text-gray-900 mb-4">Bonjour {{currentUser.firstName}}</h2>
       <div>
-        <p><strong>Name:</strong> </p>
+        <p><strong>Bienvenue sur votre Dashboard</strong> </p>
 
       </div>
     </div>
