--- a/src/app/public/show/show.component.html
+++ b/src/app/public/show/show.component.html
@@ -66,7 +66,7 @@
         </div>
       </div>
     </ng-template>
-    <h2 class="mt-2 text-sm text-gray-500">{{ campaign.dateCreated }}</h2>
+    <h2 class="mt-2 text-sm text-gray-500">{{ campaign.dateCreated | date }}</h2>
     <p class="text-sm mt-6">{{ campaign.description }}</p>
   </article>
 </main>
