--- a/src/app/public/show/show.component.html
+++ b/src/app/public/show/show.component.html
@@ -81,7 +81,7 @@
     <div class="w-full h-full overflow-auto shadow bg-green-50" id="journal-scroll">
       <table class="w-full">
         <tbody class="">
-          <tr *ngFor="let comment of campaign.transactions " class="relative transform scale-100 text-xs py-1 border-b-2 border-blue-100 cursor-default">
+          <tr *ngFor="let comment of transactions | completedTransaction" class="relative transform scale-100 text-xs py-1 border-b-2 border-blue-100 cursor-default">
 
             <td class="pl-5 pr-3 whitespace-no-wrap">
               <div class="text-gray-400">{{ comment.dateCreated | date }}</div>
