--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -3,18 +3,18 @@
   <div class="position-sticky">
     <ul class="nav flex-column">
       <li class="nav-item">
-        <a class="nav-link active" routerLink="/dashboard">
-          Dashboard
+        <a class="nav-link active" routerLink="/admin/campaigns">
+          Campagnes
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/users">
+        <a class="nav-link" routerLink="/admin/users">
           Users
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" routerLink="/products">
-          Products
+        <a class="nav-link" routerLink="/admin/transactions">
+          Transactions
         </a>
       </li>
       <!-- Add more menu items as needed -->
