--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -44,13 +44,13 @@
         <th scope="col" class="px-6 py-4 font-medium text-gray-900">Adresse</th>
         <th scope="col" class="px-6 py-4 font-medium text-gray-900">Telephone</th>
         <th scope="col" class="px-6 py-4 font-medium text-gray-900">Numero CNI</th>
-       
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Role</th>
         <th scope="col" class="px-6 py-4 font-medium text-gray-900">Actions</th>
       </tr>
     </thead>
     <tbody class="divide-y divide-gray-100 border-t border-gray-100">
 
-      <tr class="hover:bg-gray-50" *ngFor="let record of filteredUsers">
+      <tr class="hover:bg-gray-50" *ngFor="let user of filteredUsers">
 
         <th class="flex gap-3 px-6 py-4 font-normal text-gray-900">
           <div class="relative h-10 w-10">
@@ -62,36 +62,36 @@
             <span class="absolute right-0 bottom-0 h-2 w-2 rounded-full bg-green-400 ring ring-white"></span>
           </div>
           <div class="text-sm">
-            <div class="font-medium text-gray-700">{{record.firstName}}</div>
-            <div class="text-gray-400">{{record.email}}</div>
+            <div class="font-medium text-gray-700">{{user.firstName}}</div>
+            <div class="text-gray-400">{{user.email}}</div>
           </div>
         </th>
-        <td class="px-6 py-4">{{record.lastName}}</td>
+        <td class="px-6 py-4">{{user.lastName}}</td>
     
         <td class="px-6 py-4">
           <span
             class="inline-flex items-center gap-1 rounded-full bg-green-50 px-2 py-1 text-xs font-semibold text-green-600"
           >
             <span class="h-1.5 w-1.5 rounded-full bg-green-600"></span>
-            {{record.address}}
+            {{user.address}}
           </span>
         </td>
 
-        <td class="px-6 py-4">{{record.phone}}</td>
-        <td class="px-6 py-4">{{record.cni}}</td>
+        <td class="px-6 py-4">{{user.phone}}</td>
+        <td class="px-6 py-4">{{user.cni}}</td>
         <td class="px-6 py-4">
           <div class="flex gap-2">
             <span
               class="inline-flex items-center gap-1 rounded-full bg-blue-50 px-2 py-1 text-xs font-semibold text-blue-600"
             >
-            {{record.role}}
+            {{user.role}}
             </span>
             
           </div>
         </td>
         <td class="px-6 py-4">
           <div class="flex justify-end gap-4">
-            <a x-data="{ tooltip: 'Delete' }" href="#">
+            <a x-data="{ tooltip: 'Delete' }" (click)="deleteUser(user)" >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
@@ -108,7 +108,7 @@
                 />
               </svg>
             </a>
-            <a x-data="{ tooltip: 'Edite' }" href="#">
+            <a x-data="{ tooltip: 'Edite' }" (click)="openUserInfoModal(user)">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
