--- a/src/app/admin/menu/menu.component.html
+++ b/src/app/admin/menu/menu.component.html
@@ -17,7 +17,11 @@
           Transactions
         </a>
       </li>
-      <!-- Add more menu items as needed -->
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/admin/withdraws">
+          Demandes de retrait
+        </a>
+      </li>
     </ul>
   </div>
 </nav>
