--- a/src/app/admin/withdraws/withdraws.component.html
+++ b/src/app/admin/withdraws/withdraws.component.html
@@ -1,1 +1,80 @@
-<p>withdraws works!</p>
+<div class="">
+
+
+  <div class="inline-flex overflow-hidden bg-white border divide-x rounded-lg dark:bg-gray-900 rtl:flex-row-reverse dark:border-gray-700 dark:divide-gray-700">
+    <button (click)="filterWithdraws('ALL')"  class="px-5 py-2 text-xs font-medium text-gray-600 transition-colors duration-200 bg-gray-100 sm:text-sm dark:bg-gray-800 dark:text-gray-300">
+       TOUTES
+    </button>
+
+    <button (click)="filterWithdraws('DONE')"   class="px-5 py-2 text-xs font-medium text-gray-600 transition-colors duration-200 sm:text-sm dark:hover:bg-gray-800 dark:text-gray-300 hover:bg-gray-100">
+       PAYES
+    </button>
+
+    <button (click)="filterWithdraws('PENDING')"  class="px-5 py-2 text-xs font-medium text-gray-600 transition-colors duration-200 sm:text-sm dark:hover:bg-gray-800 dark:text-gray-300 hover:bg-gray-100">
+      EN ATTENTE
+    </button>
+
+</div>
+
+
+
+<div class="overflow-hidden rounded-lg border border-gray-200 shadow-md m-5">
+  <table class="w-full border-collapse bg-white text-left text-sm text-gray-500">
+    <thead class="bg-gray-50">
+      <tr>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Campagne</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Etat</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Numero</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Via</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Montant</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Date</th>
+        <th scope="col" class="px-6 py-4 font-medium text-gray-900">Payer</th>
+
+      </tr>
+    </thead>
+    <tbody class="divide-y divide-gray-100 border-t border-gray-100">
+
+      <tr class="hover:bg-gray-50" *ngFor="let wire of filteredWithdraws">
+        <td class="px-6 py-4">{{wire.campaign}}</td>
+    
+        <td class="px-6 py-4">
+          <span
+            class="inline-flex items-center gap-1 rounded-full bg-green-50 px-2 py-1 text-xs font-semibold text-green-600"
+          >
+            <span class="h-1.5 w-1.5 rounded-full bg-green-600"></span>
+            {{wire.status}}
+          </span>
+        </td>
+        <td class="px-6 py-4">{{wire.phone}}</td>
+        <td class="px-6 py-4">{{wire.method}}</td>
+        <td class="px-6 py-4">{{wire.amount}}</td>
+     
+        <td class="px-6 py-4">{{wire.dateCreated | date}}</td>
+        <td class="px-6 py-4">
+    
+            <a x-data="{ tooltip: 'Edite' }" (click)="pay(wire)">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="orange"
+                class="h-6 w-6"
+                x-tooltip="tooltip"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L6.832 19.82a4.5 4.5 0 01-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 011.13-1.897L16.863 4.487zm0 0L19.5 7.125"
+                />
+              </svg>
+            </a>
+    
+        </td>
+      
+      </tr>
+     
+      
+    </tbody>
+  </table>
+</div>
