--- a/src/app/public/donate/donate.component.html
+++ b/src/app/public/donate/donate.component.html
@@ -1,4 +1,5 @@
-<div class="min-w-screen min-h-screen bg-green-200 flex items-center justify-center px-5 pb-10 pt-16">
+<app-navbar></app-navbar>
+<div class=" min-h-full bg-green-200 flex items-center justify-center px-5 pb-16 pt-16">
   <div class="w-full mx-auto rounded-lg bg-white shadow-lg p-5 text-gray-700" style="max-width: 600px">
     <div class="w-full pt-1 pb-5">
       <div class="bg-green-500 text-white overflow-hidden rounded-full w-20 h-20 -mt-16 mx-auto shadow-lg flex justify-center items-center">
@@ -41,4 +42,4 @@
   </div>
 </div>
 
-
+<app-footer></app-footer>
