--- a/src/app/secure/dashboard/dashboard.component.html
+++ b/src/app/secure/dashboard/dashboard.component.html
@@ -1,49 +1,46 @@
 <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-4 mt-12 mb-12">
-  <div  class="bg-white rounded-lg shadow-xl overflow-hidden">
+  <div class="bg-white rounded-lg shadow-xl overflow-hidden">
     <div class="p-4">
       <h2 class="text-2xl font-bold text-gray-900 mb-4">Bonjour {{currentUser.firstName}}</h2>
       <div>
-        <p><strong>Bienvenue sur votre Dashboard</strong> </p>
-
+        <p><strong>Bienvenue sur votre Dashboard</strong></p>
       </div>
     </div>
   </div>
 </section>
+
 <section class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-1 py-3">
   <div class="text-center pb-12">
-  <article>
-    <a routerLink="/launch" class="inline-block text-center bg-green-500 border border-transparent rounded-md py-2 px-1 md:text-2xl text-gray-900 hover:bg-green-700">NOUVELLE CAMPAGNE </a>     
-    <h2 class="text-2xl font-bold text-gray-900">MES CAMPAGNES</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div *ngFor="let campaign of campaigns" class="bg-white   rounded-lg overflow-hidden shadow-lg hover:shadow-2xl ">
-        <div class="relative w-full h-80 md:h-64 lg:h-44 ">
-          <img src="assets/images/together.jpg" alt="Campaign Image" class="w-full h-full object-center object-cover">
-        </div>
-        <div class="px-3 py-4">
-          <h3 class="text-base font-semi-bold text-dark pb-2">
-            <a class="py-1 px-2 text-green rounded-lg" >
-              <span class="absolute inset-0"></span>
-              {{ campaign.title }}
-            </a>
-          </h3>
-          <p class="text-sm text-dark group-hover:text-green-400 line-clamp-3">{{ campaign.description }}</p>
-          <div *ngIf="campaign.status === 'OPENED'; else closedStatus">
-            <a >
-              <button (click)="paymentForm(campaign)" type="button"  class="block w-3/5 max-w-xs mx-auto bg-green-200 hover:bg-indigo-200 focus:bg-indigo-700 text-white rounded-lg px-1 py-1 mt-6">
-                Demander un paiement
-             </button>
-            </a>
+    <article>
+      <a routerLink="/launch" class="inline-block text-center bg-green-500 border border-transparent rounded-md py-2 px-1 md:text-2xl text-gray-900 hover:bg-green-700">NOUVELLE CAMPAGNE</a>
+      <h2 class="text-2xl font-bold text-gray-900">MES CAMPAGNES</h2>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+        <div *ngFor="let campaign of campaigns" class="bg-white rounded-lg overflow-hidden shadow-lg hover:shadow-2xl">
+          <div class="w-full h-80 md:h-64 lg:h-44" [routerLink]="['/campaigns', campaign.id]">
+            <img src="assets/images/together.jpg" alt="Campaign Image" class="w-full h-full object-center object-cover">
           </div>
-          <ng-template #closedStatus>
-            <button class="block w-3/5 max-w-xs mx-auto bg-red-500 hover:bg-red-700 focus:bg-red-700 text-white rounded-lg px-1 py-1 mt-6">
-              <i class="mdi mdi-lock-outline mr-1"></i> Fermée
-            </button>
-          </ng-template>
+          <div class="px-3 py-4">
+            <h3 class="text-base font-semi-bold text-dark pb-2">
+              <a class="py-1 px-2 text-green rounded-lg">
+                {{ campaign.title }}
+              </a>
+            </h3>
+            <p class="text-sm text-dark group-hover:text-green-400 line-clamp-3">{{ campaign.description }}</p>
+            <div *ngIf="campaign.status === 'OPENED'; else closedStatus">
+              <button (click)="paymentForm(campaign)" type="button" class="block w-3/5 max-w-xs mx-auto bg-green-200 hover:bg-indigo-200 focus:bg-indigo-700 text-white rounded-lg px-1 py-1 mt-6">
+                Demander un paiement
+              </button>
+            </div>
+            <ng-template #closedStatus>
+              <button class="block w-3/5 max-w-xs mx-auto bg-red-500 hover:bg-red-700 focus:bg-red-700 text-white rounded-lg px-1 py-1 mt-6">
+                <i class="mdi mdi-lock-outline mr-1"></i> Fermée
+              </button>
+            </ng-template>
+          </div>
         </div>
       </div>
-    </div>
-  </article>
-</div>
+    </article>
+  </div>
 </section>
 
 
