--- a/src/app/secure/create-campaign/create-campaign.component.html
+++ b/src/app/secure/create-campaign/create-campaign.component.html
@@ -11,7 +11,7 @@
 <form [formGroup]="campaignForm"  (submit)="onSubmit()">
 
   <div class="grid grid-cols-1 mt-5 mx-7">
-    <label for="kind" class="uppercase md:text-sm text-xs text-gray-900 text-light font-semibold">Type de campagne</label>
+    <label for="kind" class="uppercase md:text-sm text-xs text-dark text-light font-semibold">Type de campagne</label>
     <select formControlName="kind" id="kind" class="py-2 px-3 rounded-lg border-2 border-gray-200 mt-1 focus:outline-none focus:ring-2 focus:ring-purple-600 focus:border-transparent">
       <option value="PERSONAL">Personnelle</option>
       <option value="COMMUNITY">Communautaire</option>
