add user on admin side

--- a/src/app/admin/users/users.component.html
+++ b/src/app/admin/users/users.component.html
@@ -3,6 +3,9 @@
      
 
       <div class="flex items-center mt-4 gap-x-3">
+        <button  (click)="addUser()"  class="px-5 py-2 text-xs bg-green-500 font-medium text-gray-600 transition-colors duration-200 sm:text-sm dark:hover:bg-blue-800 dark:text-gray-300 hover:bg-blue-600">
+          Ajouter utilisateur
+        </button>
         
       </div>
   </div>
